--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 coreapi==2.3.0
 coreschema==0.0.4
 Django==1.11
+django-extensions==1.7.9
 django-filter==1.0.2
 djangorestframework==3.6.2
 itypes==1.1.0
