--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==1.11
 django-extensions==1.7.9
 django-filter==1.0.2
 djangorestframework==3.6.2
+gunicorn==19.7.1
 itypes==1.1.0
 Jinja2==2.9.6
 Markdown==2.6.8
